2001-04-01  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/render_object.c (new_render_object): Made initial handles
	behave like on most other objects.

	* app/load_save.c (read_objects): Fixed premature free'ing ofr
	typestr causing garbage.

2001-04-01  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* objects/FS/flow-ortho.c: Fixed a crashbug causes by not
	accouting for handle ordering through copy and save. (#51479)

2001-03-31  Cyrille Chepelov  <chepelov@calixo.net>

	* sheets/Circuit.sheet: Norwegian translation mistagged to German.

2001-03-31  Steffen Macke  <sdteffen@yahoo.com>

	* sheets/Circuit.sheet
	* sheets/UML.sheet
	* sheets/network.sheet: Updated German translations
	
2001-03-30  Cyrille Chepelov  <chepelov@calixo.net>
        * lib/arrows.[ch]:
	* lib/widgets.c:
	* app/lineprops_area.c: The return of the revenge of the arrow
	heads. Now all types covered by ISO 10303-201 should be covered.
	
2001-03-30  Cyrille Chepelov  <chepelov@calixo.net>

	* sheets/Flowchart.sheet: translations in probably Hungarian were
	a victim of cut-n-paste from the German one. Fixed (hopefully).
	* sheet/UML.sheet: translation in probably Norwegian was a victim
	of cut-n-paste from the French one. Fixed (hopefully).
	* sheets/Logic.sheet: French translation not tagged with
	xml:lang="fr".
	
	* sheets/checktrans.py:
	* sheets/Makefile.am: new file, sheet-translation-report, to be
	installed along the sheets, show how much of them has been
	translated into which language (I wish the result was prettier...)

	* po/README: most translators don't read this file, but anyway...

	* sheets/.cvsignore:
	* objects/network/.cvsignore: the usual negotiation with CVS.

2001-03-30  Cyrille Chepelov  <chepelov@calixo.net>

	* sheets/*.sheet: French translations

2001-03-28  Cyrille Chepelov  <chepelov@calixo.net>

	Added patch #52363 from Hubert Figuiere <hfiguiere@teaser.fr>:

	** objects/network/network.c:
	** objects/network/wanlink.c: